Fix overlapping footer when last element is an hr
This fixes an issue with an content overlapping footer when the last element
of the content is a hr-tag. For example this was seen on:
http://nodecopter.com/2013/zurich/jan-23

@karolinaszczur I hope this doesn't break anything, I've checked everywhere
but you might to doublecheck.

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -202,6 +202,7 @@ a{
     background-image: url('@{img-dir}/divider.png');
     border: none;
     margin: 35px 0 0 0;
+    clear: both;
   }
 
   h2, h2 a{
